# document-copilot

./: README.md  deployment.md
backend/: .env.example  README.md  nixpacks.toml  pyproject.toml  railway.json  verify_retrieval.py
backend/alembic/: env.py
backend/alembic/versions/: 5f41e7359408_change_embedding_dim_1536_to_384.py  6b1a34c39382_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: chat.py
backend/app/assistant/: __init__.py  agent.py  deps.py  instructions.py  outputs.py
backend/app/auth/: __init__.py  dependencies.py
backend/app/chat/: __init__.py  orchestrator.py  streaming.py
backend/app/database/: __init__.py  chats.py  connection.py  supabase.py
backend/app/database/models/: __init__.py  chat_message.py  chat_thread.py  document_chunk.py  message_citation.py  source_document.py  user.py
backend/app/grounding/: __init__.py  validator.py
backend/app/retrieval/: README.md  __init__.py  fusion.py  queries.py  service.py
backend/ingest/: __init__.py  chunk_and_embed.py  chunking.py  embeddings.py  seed_source_documents.py
backend/tests/: test_agent.py  test_grounding.py  test_retrieval.py
data/: README.md  convert_to_markdown.py
data/markdown/: manifest.json
docs/: architecture.md  deployment.md
docs/guides/: backend-setup.md  frontend-setup.md  supabase-setup.md
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts  auth.tsx  env.ts  http.ts  supabase.ts
(+6 files in other folders)
