[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[project]
name = "document-copilot-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.5",
    "fastapi==0.138.1",
    "greenlet==3.5.3",
    "groq==1.5.0",
    "httpx==0.28.1",
    "openai==2.44.0",
    "pgvector==0.4.2",
    "psycopg[binary]==3.3.4",
    "pydantic==2.13.4",
    "pydantic-ai==2.1.0",
    "pydantic-settings==2.14.2",
    "sqlalchemy==2.0.51",
    "structlog==26.1.0",
    "supabase==2.31.0",
    "uvicorn==0.49.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
add-bounds = "exact"
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "docling==2.107.0",
    "ipykernel==7.3.0",
    "pytest==9.1.1",
    "ruff==0.15.20",
]
